--- a/src/nginx/nginx.conf.template
+++ b/src/nginx/nginx.conf.template
@@ -19,15 +19,22 @@ http {
         listen 80;
         listen [::]:80;
         server_name ${SERVER_NAME};
-        return 302 https://$server_name$request_uri;
+
+        location /.well-known/acme-challenge/ {
+            root /var/www/certbot;
+        }
+
+        location / {
+            return 301 https://$server_name$request_uri;
+        }
     }
 
     server {
         listen 443 ssl http2;
         server_name ${SERVER_NAME} www.${SERVER_NAME};
 
-        ssl_certificate /etc/nginx/certs/${SERVER_NAME}-cert.pem;
-        ssl_certificate_key /etc/nginx/certs/${SERVER_NAME}-key.pem;
+        ssl_certificate /etc/nginx/certs/${SERVER_NAME}/fullchain.pem;
+        ssl_certificate_key /etc/nginx/certs/${SERVER_NAME}/privkey.pem;
 
         location /discord {
             return 301 https://discord.gg/4qcXbeVehZ;
@@ -45,8 +52,8 @@ http {
         listen 443 ssl http2;
         server_name api.test.${SERVER_NAME};
 
-        ssl_certificate /etc/nginx/certs/${SERVER_NAME}-cert.pem;
-        ssl_certificate_key /etc/nginx/certs/${SERVER_NAME}-key.pem;
+        ssl_certificate /etc/nginx/certs/${SERVER_NAME}/fullchain.pem;
+        ssl_certificate_key /etc/nginx/certs/${SERVER_NAME}/privkey.pem;
 
         location / {
             proxy_set_header Host $host;
