--- a/src/nginx/nginx.conf.template
+++ b/src/nginx/nginx.conf.template
@@ -36,15 +36,12 @@ http {
         ssl_certificate /etc/nginx/certs/${SERVER_NAME}/fullchain.pem;
         ssl_certificate_key /etc/nginx/certs/${SERVER_NAME}/privkey.pem;
 
-        location /discord {
-            return 301 https://discord.gg/4qcXbeVehZ;
+        location / {
+            return 301 https://github.com/durudex;
         }
 
-        location /api/test/ {
-            proxy_set_header Host $host;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_pass http://test_api/;
+        location = /discord {
+            return 301 https://discord.gg/4qcXbeVehZ;
         }
     }
 
@@ -59,7 +56,7 @@ http {
             proxy_set_header Host $host;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Real-IP $remote_addr;
-            proxy_pass http://test_api/;
+            proxy_pass http://test_api;
         }
     }
 }
