--- a/src/nginx/nginx.conf.template
+++ b/src/nginx/nginx.conf.template
@@ -18,15 +18,9 @@ http {
     server {
         listen 80;
         listen [::]:80;
-        server_name ${SERVER_NAME};
+        server_name *.${SERVER_NAME};
 
-        location /.well-known/acme-challenge/ {
-            root /var/www/certbot;
-        }
-
-        location / {
-            return 301 https://$server_name$request_uri;
-        }
+        return 301 https://$host$request_uri;
     }
 
     server {
@@ -37,7 +31,7 @@ http {
         ssl_certificate_key /etc/nginx/certs/${SERVER_NAME}/privkey.pem;
 
         location / {
-            return 301 https://github.com/durudex;
+            return 301 https://docs.durudex.com;
         }
 
         location = /discord {
